# tic-tac-toe-c

./: CMakeLists.txt
src/: main.c
